2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* daemon/nwam-wifi-item.c:
	  Add descriptions for wireless strength and security icons, 
	  fixing defect#11157.
	* capplet/nwam-manager-properties.ui:
	  Add 'label-for' to labels, fixing defect#10761.
	* capplet/nwam_rules_dialog.c: 
	  Add 'label-for' to label for created conditions table, also 
	  fixing defect#10761.
	* common/libnwamui.h, common/libnwamui.c: 
	  Add some a11y utility functions used for above fixes:
	  - nwamui_util_set_a11y_label_for_widget
	  - nwamui_util_set_widget_a11y_info.
	* capplet/capplet-utils.c: 
	  Fix issue found with duplicate name checking where it was checking
	  self too giving error.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c: 
	  Fix defect#10875 where duplicate names are allowed to be given to
	  locations. Adds a check before setting the name whether it
	  already exists or not.

2009-09-07  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.ui:
	* capplet/nwam_location_dialog.c (on_button_clicked):
	* capplet/nwam_rules_dialog.c (apply), (nwam_rules_dialog_init),
	(nwam_rules_dialog_finalize), (nwam_rules_dialog_run),
	(response_cb):
	* capplet/nwam_rules_dialog.h:
	* capplet/nwam_vpn_pref_dialog.c (on_rules_button_clicked):
	Scrollwindow doesn't support remove an inserted panel, so use vbox.
	Fixed 10787 [A11y] The Edit VPN rules window fails to adjust window
	size to expose all the widgets inside.

2009-09-04  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c:
	  Ensure that do_connect on wifi_dialog is false when editing.
	* capplet/nwam_wireless_dialog.c:
	  Fix defect#10900 to add key length and format checking to WEP and
	  WPA keys input.
	* common/nwamui_daemon.c:
	  Don't re-populate the wifi fav list on connect to a wlan, we will
	  get events to do it for us.
	* common/nwamui_ncu.c:
	  Fix minor bug where some states we're defaulting to NOT_CONNECTED